--- a/about.html
+++ b/about.html
@@ -40,7 +40,10 @@
 									<header class="major">
 										<h1>About</h1>
 									</header>
-									<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+									<h3>Una Esperanza Viva Indianapolis perteneciente a las Asambleas de Dios y con cobertura de la Iglesia Cristiana 
+										para las Naciones Una Esperanza Viva con sede en Nashville, TN.
+									</h3>
+									<sspan class="image main"><img src="images/horarios.jpg" alt="" /></span>
 									<p>placeholder</p>
 									<p>placeholder</p>
 									<p>placeholder</p>
