--- a/donaciones.html
+++ b/donaciones.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Sobre Nosotros</title>
+		<title>Donaciones</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -39,9 +39,11 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Donaciones</h1>
+										<h2>2 Corintios 9:7</h2>
+										<h3>Cada uno debe decidir en su corazón cuánto dar; y no den de mala gana ni bajo presión, 
+											«porque Dios ama a la persona que da con alegría»</h3>
 									</header>
-									<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
-									<p>Links are gonna go here. Zelle&Paypal</p>
+									<a class="image main" href="https://www.zellepay.com/go/zelle"><img src="images/zelle-badge-test.png"></a>
 								</div>
 							</section>
 
