--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Untitled</title>
+		<title>UEV Indy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -51,6 +51,12 @@
 				<!-- Wrapper -->
 					<div id="wrapper">
 
+						<section id="main" class="main">
+							<div class="inner">
+								<span class="image main"><img src="images/about.jpg" alt="" /></span>
+							</div>
+						</section>
+
 						<section id="one" class="main">
 							<div class="inner spotlight style1">
 								<div class="content">
@@ -61,31 +67,32 @@
 							</div>
 						</section>
 						
-						<!-- One -->
-							<section id="one" class="main">
-								<div class="inner spotlight style1">
-									<div class="content">
-										<header>
-											<h2>Reunion de Lideres</h2>
-										</header>
-										<p> </p>
-									</div>
-									<!--
-										You can replace the image below with a JPEG or PNG. Just make sure it's exactly
-										320x340 or at least the same aspect ratio (16:17)
-									-->
-									<span class="image"><img src="images/anuncio-1.jpg" alt="" /></span>
-								</div>
-							</section>
-
-						<!-- One -->
+						<!-- Two -->
 						<section id="one" class="main">
 							<div class="inner spotlight style1">
 								<div class="content">
 									<header>
-										<h2>Reunion de Lideres</h2>
+										<h1>VII Aniversario</h1>
 									</header>
-									<p> </p>
+									<h2> 30 y 31 de Julio 2022 a las 7PM!</h2>
+
+								</div>
+								<!--
+									You can replace the image below with a JPEG or PNG. Just make sure it's exactly
+									320x340 or at least the same aspect ratio (16:17)
+								-->
+								<span class="image"><img src="images/anuncio-2.jpg" alt="" /></span>
+							</div>
+						</section>
+
+						<!-- Two -->
+						<section id="one" class="main">
+							<div class="inner spotlight style1">
+								<div class="content">
+									<header>
+										<h1>Reunion de Lideres!</h1>
+									</header>
+									<h2> 15 de Julio!</h2>
 								</div>
 								<!--
 									You can replace the image below with a JPEG or PNG. Just make sure it's exactly
@@ -95,20 +102,21 @@
 							</div>
 						</section>
 
-						<!-- One -->
+						<!-- Two -->
 						<section id="one" class="main">
 							<div class="inner spotlight style1">
 								<div class="content">
 									<header>
-										<h2>Reunion de Lideres</h2>
+										<h1>Comidas Tipicas</h1>
 									</header>
-									<p> </p>
+									<h2> 30 de Julio 2022!</h2>
+									<h2> En celebracion a nuestro 8vo Aniversario Mas de 10 paises representados!</h2>
 								</div>
 								<!--
 									You can replace the image below with a JPEG or PNG. Just make sure it's exactly
 									320x340 or at least the same aspect ratio (16:17)
 								-->
-								<span class="image"><img src="images/anuncio-1.jpg" alt="" /></span>
+								<span class="image"><img src="images/anuncio-3.jpg" alt="" /></span>
 							</div>
 						</section>
 
