added ministerios and other pictures

--- a/donaciones.html
+++ b/donaciones.html
@@ -13,7 +13,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"> Una Esperanza Viva<span>Indy</span></a>
+						<a href="index.html" class="logo"> Una Esperanza Viva Indy</a>
 						<nav>
 							<ul>
 								<li><a href="#menu">Menu</a></li>
@@ -28,6 +28,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="https://www.facebook.com/uevindyoficial/?ref=page_internal">En Vivo</a></li>
 						<li><a href="donaciones.html">Donaciones</a></li>
+						<li><a href="ministerios.html">Ministerios</a></li>
 					</ul>
 				</nav>
 
