--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Una Esperanza Viva <span>Indy</span></a>
+						<a href="index.html" class="logo"> Una Esperanza Viva Indy</a>
 						<nav>
 							<ul>
 								<li><a href="#menu">Menu</a></li>
@@ -29,6 +29,7 @@
 						<li><a href="about.html">About</a></li>
 						<li><a href="https://www.facebook.com/uevindyoficial/?ref=page_internal">En Vivo</a></li>
 						<li><a href="donaciones.html">Donaciones</a></li>
+						<li><a href="ministerios.html">Ministerios</a></li>
 					</ul>
 				</nav>
 
@@ -40,9 +41,15 @@
 								<h1>Una Esperanza Viva Indy</h1>
 								<h2>Iglesia para las naciones!</h2>
 							</header>
+
 							<ul class="actions special">
 								<li><a href="https://www.facebook.com/uevindyoficial/" class="button primary large">Ver en Vivo</a></li>
 							</ul>
+
+							<ul class="actions special">
+								<li><a href="about.html" class="button primary large">Learn More</a></li>
+							</ul>
+
 						</div>
 						<a href="#one" class="more">Learn More</a>
 						<video src="images/video.mp4" muted autoplay loop playsinline></video>
@@ -50,13 +57,13 @@
 
 				<!-- Wrapper -->
 					<div id="wrapper">
-
+					<!--
 						<section id="main" class="main">
 							<div class="inner">
 								<span class="image main"><img src="images/about.jpg" alt="" /></span>
 							</div>
 						</section>
-
+					-->
 						<section id="one" class="main">
 							<div class="inner spotlight style1">
 								<div class="content">
@@ -77,10 +84,6 @@
 									<h2> 30 y 31 de Julio 2022 a las 7PM!</h2>
 
 								</div>
-								<!--
-									You can replace the image below with a JPEG or PNG. Just make sure it's exactly
-									320x340 or at least the same aspect ratio (16:17)
-								-->
 								<span class="image"><img src="images/anuncio-2.jpg" alt="" /></span>
 							</div>
 						</section>
@@ -94,10 +97,6 @@
 									</header>
 									<h2> 15 de Julio!</h2>
 								</div>
-								<!--
-									You can replace the image below with a JPEG or PNG. Just make sure it's exactly
-									320x340 or at least the same aspect ratio (16:17)
-								-->
 								<span class="image"><img src="images/anuncio-1.jpg" alt="" /></span>
 							</div>
 						</section>
@@ -112,13 +111,25 @@
 									<h2> 30 de Julio 2022!</h2>
 									<h2> En celebracion a nuestro 8vo Aniversario Mas de 10 paises representados!</h2>
 								</div>
-								<!--
-									You can replace the image below with a JPEG or PNG. Just make sure it's exactly
-									320x340 or at least the same aspect ratio (16:17)
-								-->
 								<span class="image"><img src="images/anuncio-3.jpg" alt="" /></span>
 							</div>
 						</section>
+					<!--
+						<!--Ministerios de Ninos
+						<section id="main" class="main">
+							<div class="inner">
+								<span class="image main"><img src="images/Capture.PNG" alt="" /></span>
+							</div>
+							<section id="cta" class="main special">
+								<div class="inner">
+									<p> </p>
+									<ul class="actions stacked special">
+										<li><a href="about.html" class="button large">Learn More</a></li>
+									</ul>
+								</div>
+							</section>
+						</section>
+					-->
 
 
 					<!--Seperator-->
@@ -159,7 +170,7 @@
 								</div>
 							</section>
 
-						<!-- CTA -->
+						<!--		
 							<section id="cta" class="main special">
 								<div class="inner">
 									<p> </p>
@@ -168,7 +179,7 @@
 									</ul>
 								</div>
 							</section>
-
+						-->		
 					</div>
 
 				<!-- Footer -->
