--- a/mujeres.html
+++ b/mujeres.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Sobre Nosotros</title>
+		<title>Minsterio de Mujeres</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -33,30 +33,20 @@
 				</nav>
 
 				<!-- Wrapper -->
-					<div id="wrapper">
+						<div id="wrapper">
 
-						<!-- Main -->
-							<section id="main" class="main">
-								<div class="inner">
-									<header class="major">
-										<h1>About</h1>
-										<h3>
-											Una Esperanza Viva Indianapolis perteneciente a las Asambleas de Dios y con cobertura de la Iglesia Cristiana 
-											para las Naciones Una Esperanza Viva con sede en Nashville, TN.
-										</h3>
-										<span class="image main"><img src="images/horarios.jpg" alt="" /></span>
+							<!-- Main -->
+								<section id="main" class="main">
+									<div class="inner">
+										<header class="major">
+											<h1>Ministerio de Mujeres</h1>
+											<h3>description</h3>
+											<!--<a class="image main" href="ninos.html"><img src="images/horarios.jpg"></a>-->
+										</header>
+									</div>
+								</section>
 
-										<h2>Pastores</h2>
-										<h2>
-											Pastores Albert y Elivi Gomez
-										</h2>
-										<span class="image main"><img src="images/pastores.JPG" alt="" width="50"/></span>
-									</header>
-									<!--<span class="image main"><img src="images/horarios.jpg" alt="" /></span>-->
-								</div>
-							</section>
-
-					</div>
+						</div>
 
 				<!-- Footer -->
 				<footer id="footer">
