--- a/index.html
+++ b/index.html
@@ -144,27 +144,34 @@
 											<span class="fa fa-church fa-3x style1"></span>
 											<br>
 											<h2>Domingo</h2>
-											<p>11:30am</p>
+											<h3>Escuela Dominical</h3>
+											<p>10:00AM</p>
+											<h3>Servicio Central</h3>
+											<p>11:30AM</p>
 										</section>
 										<section>
 											<span class="fa fa-pray fa-3x style1"></span>
 											<h2>Martes</h2>
-											<p>11:30am</p>
+											<h3>Servicio de Oración</h3>
+											<p>7:00PM</p>
 										</section>
 										<section>
 											<span class="fas fa-hand-holding-heart fa-3x"></span>
 											<h2>Jueves</h2>
-											<p>11:30am</p>
+											<h3>Estudio Biblico</h3>
+											<p>7:00PM</p>
 										</section>
 										<section>
-											<span class="fas fa-praying-hands fa-2x"></span>
-											<h2>Viernes</h2>
-											<p>11:30am</p>
+											<span class="fas fa-praying-hands fa-3x"></span>
+											<h2>Jueves</h2>
+											<h3>Eventos por los diferentes ministerios</h3>
+											<p>7:00PM</p>
 										</section>
 										<section>
 											<span class="fas fa-bible fa-2x"></span>
 											<h2>Sabado</h2>
-											<p>11:30am</p>
+											<h3>Matutino</h3>
+											<p>5:00AM</p>
 										</section>
 									</div>
 								</div>
