updated horarios (jueves type to friday)

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 										</section>
 										<section>
 											<span class="fas fa-praying-hands fa-3x"></span>
-											<h2>Jueves</h2>
+											<h2>Viernes</h2>
 											<h3>Eventos por los diferentes ministerios</h3>
 											<p>7:00PM</p>
 										</section>
