updated jovenes banner

--- a/ministerios.html
+++ b/ministerios.html
@@ -44,7 +44,7 @@
 										<a class="image main" href="ninos.html"><img src="images/horarios.jpg"></a>
                                         <a class="image main" href="mujeres.html"><img src="images/horarios.jpg"></a>
                                         <a class="image main" href="hombres.html"><img src="images/horarios.jpg"></a>
-                                        <a class="image main" href="jovenes.html"><img src="images/horarios.jpg"></a>
+                                        <a class="image main" href="jovenes.html"><img src="images/jovenes.jpg"></a>
                                         <a class="image main" href="escuela.html"><img src="images/horarios.jpg"></a>
 									</header>
 								</div>
