--- a/jovenes.html
+++ b/jovenes.html
@@ -40,8 +40,8 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Ministerio de Jovenes</h1>
-										<h3>description</h3>
-										<!--<a class="image main" href="ninos.html"><img src="images/horarios.jpg"></a>-->
+										<h2>Apoyando a los jóvenes tener un encuentro con Dios, descubrir su propósito, crecer en comunidad y hacer una diferencia.</h2>
+										<a class="image main" ><img src="images/jovenes.jpg"></a>
 									</header>
 								</div>
 							</section>
