galeria index/ministerios pics

--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
 										<h1>VII Aniversario</h1>
 									</header>
 									<h2> 30 y 31 de Julio 2022 a las 7PM!</h2>
-
 								</div>
 								<span class="image"><img src="images/anuncio-2.jpg" alt="" /></span>
 							</div>
@@ -93,11 +92,13 @@
 							<div class="inner spotlight style1">
 								<div class="content">
 									<header>
-										<h1>Reunion de Lideres!</h1>
+										<h1>Rejoice!</h1>
+										<h2>Congreso de Damas!</h2>
+										<h2> Del 9 al 11 de Julio!</h2>
 									</header>
-									<h2> 15 de Julio!</h2>
+									<!--<h2> Del 9 al 11 de Julio!</h2>-->
 								</div>
-								<span class="image"><img src="images/anuncio-1.jpg" alt="" /></span>
+								<span class="image"><img src="images/anuncio-4.jpg" alt="" /></span>
 							</div>
 						</section>
 
@@ -114,30 +115,13 @@
 								<span class="image"><img src="images/anuncio-3.jpg" alt="" /></span>
 							</div>
 						</section>
-					<!--
-						<!--Ministerios de Ninos
-						<section id="main" class="main">
-							<div class="inner">
-								<span class="image main"><img src="images/Capture.PNG" alt="" /></span>
-							</div>
-							<section id="cta" class="main special">
-								<div class="inner">
-									<p> </p>
-									<ul class="actions stacked special">
-										<li><a href="about.html" class="button large">Learn More</a></li>
-									</ul>
-								</div>
-							</section>
-						</section>
-					-->
-
 
 					<!--Seperator-->
 						<!-- Four -->
 							<section id="four" class="main special">
 								<div class="inner">
 									<header>
-										<h2>Horarios de Culto</h2>
+										<h1>Horarios de Culto</h1>
 									</header>
 									<div class="features">
 										<section>
@@ -174,6 +158,24 @@
 											<p>5:00AM</p>
 										</section>
 									</div>
+								</div>
+							</section>
+							
+							<section id="four" class="main special">
+								<div class="inner">
+									<header>
+										<h1>Galeria!</h1>
+									</header>
+										<section id="main" class="main">
+											<div class="inner">
+												<span class="image main"><img src="images/index-1.jpg" alt="" /></span>
+												<span class="image main"><img src="images/index-2.jpg" alt="" /></span>
+												<span class="image main"><img src="images/index-3.jpg" alt="" /></span>
+												<span class="image main"><img src="images/index-4.jpg" alt="" /></span>
+												<span class="image main"><img src="images/index-5.jpg" alt="" /></span>
+												<span class="image main"><img src="images/index-6.jpg" alt="" /></span>
+											</div>
+										</section>
 								</div>
 							</section>
 
