finished ministerios + tweaks

--- a/about.html
+++ b/about.html
@@ -34,28 +34,39 @@
 
 				<!-- Wrapper -->
 					<div id="wrapper">
-
 						<!-- Main -->
 							<section id="main" class="main">
 								<div class="inner">
 									<header class="major">
-										<h1>About</h1>
-										<h3>
+										<h1>Sobre Nosotros</h1>
+										<h2>
 											Una Esperanza Viva Indianapolis perteneciente a las Asambleas de Dios y con cobertura de la Iglesia Cristiana 
 											para las Naciones Una Esperanza Viva con sede en Nashville, TN.
-										</h3>
-										<span class="image main"><img src="images/horarios.jpg" alt="" /></span>
-
-										<h2>Pastores</h2>
-										<h2>
-											Pastores Albert y Elivi Gomez
 										</h2>
-										<span class="image main"><img src="images/pastores.JPG" alt="" width="50"/></span>
+										<span class="image main"><img src="images/horarios.jpg" alt="" /></span>
+										<div class="inner">
+											<ul class="icons">
+												<li><a href="https://www.facebook.com/uevindyoficial/?ref=page_internal" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+												<li><a href="https://instagram.com/unaesperanzavivaindiana?igshid=YmMyMTA2M2Y=" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+												<li><a href="https://www.facebook.com/uevindyoficial/?ref=page_internal" class="icon solid alt fa-envelope"><span class="label">Messenger</span></a></li>
+											</ul>
+										</div>
 									</header>
-									<!--<span class="image main"><img src="images/horarios.jpg" alt="" /></span>-->
 								</div>
 							</section>
+					</div>
 
+					<div id="wrapper">
+						<!-- Main -->
+							<section id="main" class="main">
+								<div class="inner">
+									<header class="major">
+										<h1>Familia Pastoral!</h1>
+										<h2>Albert y Elivic Moreno</h2>
+										<span class="image main"><img src="images/pastores.JPG" alt="" width="50"/></span>
+									</header>
+								</div>
+							</section>
 					</div>
 
 				<!-- Footer -->
