--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 					<section id="banner" data-video="images/banner">
 						<div class="inner">
 							<header>
-								<!--<span class="image main"><img src="images/Uevi logo.png" alt="" /></span>-->
-								<h1>Una Esperanza Viva Indy</h1>
-								<h2>Iglesia para las naciones!</h2>
+								<span class="image main"><img src="images/Uevi logo.png" alt="" /></span>
+								<!--<h1>Una Esperanza Viva Indy</h1>-->
+								<!--<h2>Iglesia para las naciones!</h2>-->
 							</header>
 
 							<ul class="actions special">
@@ -60,22 +60,19 @@
 					<!--
 						<section id="main" class="main">
 							<div class="inner">
-								<span class="image main"><img src="images/about.jpg" alt="" /></span>
+								<span class="image main"><img src="images/logo2.jpg" alt="" /></span>
 							</div>
 						</section>
 					-->
-						<section id="one" class="main">
-							<div class="inner spotlight style1">
-								<div class="content">
-									<header>
-										<b><h1>Anuncios!</h1></b>
-									</header>
-								</div>
-							</div>
-						</section>
-						
 						<!-- Two -->
 						<section id="one" class="main">
+							<section id="four" class="main special">
+								<div class="inner">
+									<header>
+										<h1>Anuncios!</h1>
+									</header>
+								</div>
+							</section>
 							<div class="inner spotlight style1">
 								<div class="content">
 									<header>
