--- a/mujeres.html
+++ b/mujeres.html
@@ -40,8 +40,10 @@
 									<div class="inner">
 										<header class="major">
 											<h1>Ministerio de Mujeres</h1>
-											<h3>description</h3>
-											<!--<a class="image main" href="ninos.html"><img src="images/horarios.jpg"></a>-->
+											<h2>Alcazar a la mujer para que este integrada en la Iglesia y sea instruida en la palabra de Dios, 
+												y de esa manera alcazar a otras no creyentes, través de la palabra de Dios y guía del Espíritu Santo y 
+												así ser un instrumento de Bendición para otras mujeres que no conocen de Cristo.</h2>
+											<a class="image main" ><img src="images/damas.jpg"></a>
 										</header>
 									</div>
 								</section>
