--- a/ninos.html
+++ b/ninos.html
@@ -40,8 +40,8 @@
 									<div class="inner">
 										<header class="major">
 											<h1>Ministerio de Niños</h1>
-											<h3>description</h3>
-											<!--<a class="image main" href="ninos.html"><img src="images/horarios.jpg"></a>-->
+											<h2>El ministerio de niños esta diseñado para instruir a sus hijos en los caminos del Señor!</h2>
+											<a class="image main"><img src="images/ninos.jpg"></a>
 										</header>
 									</div>
 								</section>
