--- a/escuela.html
+++ b/escuela.html
@@ -40,8 +40,8 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Escuela Dominical</h1>
-										<h3>description</h3>
-										<!--<a class="image main" href="ninos.html"><img src="images/horarios.jpg"></a>-->
+										<h2>Escuela Dominical nos prepara y capacita para ser hombres y mujeres salvando almas!</h2>
+										<<a class="image main"><img src="images/escuela-dominical.jpg"></a>
 									</header>
 								</div>
 							</section>
