--- a/ministerios.html
+++ b/ministerios.html
@@ -41,9 +41,9 @@
 									<header class="major">
 										<h1>Ministerios</h1>
 										<h3></h3>
-										<a class="image main" href="ninos.html"><img src="images/horarios.jpg"></a>
-                                        <a class="image main" href="mujeres.html"><img src="images/horarios.jpg"></a>
-                                        <a class="image main" href="hombres.html"><img src="images/horarios.jpg"></a>
+										<a class="image main" href="ninos.html"><img src="images/ninos.jpg"></a>
+                                        <a class="image main" href="mujeres.html"><img src="images/damas.jpg"></a>
+                                        <a class="image main" href="hombres.html"><img src="images/caballeros.jpg"></a>
                                         <a class="image main" href="jovenes.html"><img src="images/jovenes.jpg"></a>
                                         <a class="image main" href="escuela.html"><img src="images/escuela-dominical.jpg"></a>
 									</header>
