directions, plus social banners

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="banner" data-video="images/banner">
 						<div class="inner">
 							<header>
-								<span class="image main"><img src="images/Uevi logo.png" alt="" /></span>
+								<span class="image main"><img src="images/logo.png" alt="" /></span>
 								<!--<h1>Una Esperanza Viva Indy</h1>-->
 								<!--<h2>Iglesia para las naciones!</h2>-->
 							</header>
