--- a/about.html
+++ b/about.html
@@ -43,14 +43,6 @@
 											Una Esperanza Viva Indianapolis perteneciente a las Asambleas de Dios y con cobertura de la Iglesia Cristiana 
 											para las Naciones Una Esperanza Viva con sede en Nashville, TN.
 										</h2>
-										<span class="image main"><img src="images/horarios.jpg" alt="" /></span>
-										<div class="inner">
-											<ul class="icons">
-												<li><a href="https://www.facebook.com/uevindyoficial/?ref=page_internal" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://instagram.com/unaesperanzavivaindiana?igshid=YmMyMTA2M2Y=" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="https://www.facebook.com/uevindyoficial/?ref=page_internal" class="icon solid alt fa-envelope"><span class="label">Messenger</span></a></li>
-											</ul>
-										</div>
 									</header>
 								</div>
 							</section>
@@ -66,6 +58,22 @@
 										<span class="image main"><img src="images/pastores.JPG" alt="" width="50"/></span>
 									</header>
 								</div>
+							</section>
+					</div>
+
+					<div id="wrapper">
+						<!-- Main -->
+							<section id="main" class="main">
+								<header class="major">
+									<h1>Informacion</h1>
+								</header>
+									<div class="inner">
+											<a class="image main" href="https://maps.google.com/?q=3750 Nolensville Pike Nashville, TN, 37211"><img src="images/dirreciones.jpg"></a>
+											<a class="image main" href="https://www.facebook.com/uevindyoficial/?ref=page_internal"><img src="images/horarios.jpg"></a>
+											<a class="image main" href="https://www.facebook.com/uevindyoficial/?ref=page_internal"><img src="images/facbook.jpeg"></a>
+											<a class="image main" href="https://instagram.com/unaesperanzavivaindiana?igshid=YmMyMTA2M2Y="><img src="images/instagram.png"></a>
+											<a class="image main" href="https://www.facebook.com/uevindyoficial/?ref=page_internal"><img src="images/messenger.jpg"></a>
+									</div>
 							</section>
 					</div>
 
