--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 						<!-- Main -->
 							<section id="main" class="main">
 								<header class="major">
-									<h1>Informacion</h1>
+									<h1>Información</h1>
 								</header>
 									<div class="inner">
 											<a class="image main" href="https://maps.google.com/?q=3750 Nolensville Pike Nashville, TN, 37211"><img src="images/dirreciones.jpg"></a>
