--- a/escuela.html
+++ b/escuela.html
@@ -40,7 +40,9 @@
 								<div class="inner">
 									<header class="major">
 										<h1>Escuela Dominical</h1>
-										<h2>Escuela Dominical nos prepara y capacita para ser hombres y mujeres salvando almas!</h2>
+										<h2>Se enfoca en todo niño, adolecente, joven, y adulto para que puedan oir la voz de nuestro Señor 
+											Jesucristo y conocerle. Por tanto, estamos seguros que el instruirlos en la palabra de Dios 
+											y asi cumpliremos nuestra misión. Proverbios 22:6</h2>
 										<<a class="image main"><img src="images/escuela-dominical.jpg"></a>
 									</header>
 								</div>
