--- a/hombres.html
+++ b/hombres.html
@@ -40,7 +40,7 @@
 							<div class="inner">
 								<header class="major">
 									<h1>Ministerio de Hombres</h1>
-									<h2>Ser un ministerio, hombres de fe, que trabaje para la conversión de todo hombre a la fe y Amor de "Cristo Jesús" 
+									<h2>Ser un ministerio, hombres de valor, que trabaje para la conversión de todo hombre a la fe y Amor de "Cristo Jesús" 
 										con el fin de afirmar una gran familia en Cristo, inspirada por Dios y 
 										así expresar su perfecto Amor a cada hermano de la fe. Romanos 10: 14-15</h2>
 									<a class="image main"><img src="images/caballeros.jpg"></a>
